Changelog
=========

6.6-dev - (unreleased)
----------------------
* Change: Merged forward and backward relations within eea_relateditems.pt in 
  order to avoid having publicated titles if both the forward and backward
  categories had the same title. If they don't have the same title then the
  behaviour will be the same as before this change.
  [ichimdav refs #17059]
* Bug fix: Fixed permissions for popup-selecteditems view as it asks for
  login and breaks the edit layout if the user doesn't have the standard Editor
  role but she/he can add/edit a document
  [voineali refs #17010]

6.5 - (2013-10-07)
------------------
* Change: Added the notoc class in order to remove the relations h3 headers
  from the EEA TOC
  [ichimdav refs #16929]

6.4 - (2013-09-06)
------------------
* Bug fix: fixed tab behaviour with faceted loading when upgrading to Plone 4.3
  [ichim-david fixes #16598]
* Bug fix: fixed height of tabs on Chrome browser which spanned over two lines
  because of the required images
  [ichim-david refs #16598]
* Change: added small optimizations to relations lookups
  [ichim-david refs #14863]

6.3 - (2013-08-09)
------------------
* Bug fix: Fixed missing i18n translations.
  [prospchr refs #15572]

6.2 - (2013-05-20)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.relations
* Bug fix: Use schemaextender to override default relatedItems widget for all
  Archetypes Content-Types. This fixes the missing macro eeareferencebrowser
  error when EEA Relations is not installed yet in Site Setup > Add-ons
  [voineali refs #9486]
* Feature: Added uninstall profile to easily uninstall eea.relations
  [voineali refs #9486]
* Change: load relatedItemsWithThumbs macro only on view template to avoid it
  from showing up in unwanted places like edit form
  [ichim-david]

6.1 - (2013-04-17)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on