@@ -3,6 +3,9 @@ Changelog
 
 6.6-dev - (unreleased)
 ----------------------
+* Feature: added categorizations.txt functional test for covering the logic
+  of relations macros
+  [ichimdav refs #17059]
 * Change: Merged forward and backward relations within eea_relateditems.pt in 
   order to avoid having publicated titles if both the forward and backward
   categories had the same title. If they don't have the same title then the
